# nano_llms

./: .gitignore  README.md  decode.py  main.py  pyproject.toml  tokenize_dataset.py  tokenizer_dataset.py  train.py  train_tokenizer.py
config/: experiment_0.yaml  run_1.yaml  run_2.yaml  run_3.yaml  run_4.yaml  run_5.yaml  run_6.yaml  run_7.yaml  sweep_lr.yaml  sweep_lr_experiment.yaml
config/owt_variants/: baseline.yaml  muon.yaml  relu2.yaml  relu2_qknorm.yaml  relu2_qknorm_zeroinit.yaml
data/: tokenizer_page.txt
nano_llms/: adamw.py  attention.py  embedding.py  ffn.py  linear.py  ops.py  rmsnorm.py  rope.py  softmax.py  tokenizer.py  training.py  transformer.py
