[project]
name = "nano-llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "jaxtyping>=0.3.3",
    "jsonargparse[signatures]>=4.48.0",
    "numpy>=2.3.4",
    "psutil>=7.2.2",
    "pytest>=9.0.3",
    "regex>=2025.10.23",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "tqdm>=4.67.1",
    "wandb>=0.26.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
